@@ -5,7 +5,6 @@ import com.czertainly.api.model.common.attribute.common.AttributeType;
 import com.czertainly.api.model.common.attribute.common.BaseAttribute;
 import com.czertainly.api.model.common.attribute.common.content.AttributeContentType;
 import com.czertainly.api.model.common.attribute.common.properties.DataAttributeProperties;
-import com.czertainly.api.model.common.attribute.v2.BaseAttributeV2;
 import com.czertainly.api.model.common.attribute.v2.DataAttributeV2;
 import com.czertainly.api.model.common.attribute.v2.content.BooleanAttributeContentV2;
 import com.czertainly.api.model.common.attribute.v2.content.StringAttributeContentV2;
@@ -16,7 +15,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Component
@@ -54,7 +52,7 @@ public class RsaEncryptionAttributes {
         );
     }
 
-    public static BaseAttributeV2<?> buildDataEncryptionScheme() {
+    public static BaseAttribute buildDataEncryptionScheme() {
         // define Data Attribute
         DataAttributeV2 attribute = new DataAttributeV2();
         attribute.setUuid(ATTRIBUTE_DATA_RSA_ENC_SCHEME_UUID);
@@ -65,7 +63,7 @@ public class RsaEncryptionAttributes {
         attribute.setContent(
                 Stream.of(RsaEncryptionScheme.values())
                         .map(item -> new StringAttributeContentV2(item.getLabel(), item.getCode()))
-                        .collect(Collectors.toList())
+                        .toList()
         );
         // create properties
         DataAttributeProperties attributeProperties = new DataAttributeProperties();
@@ -79,7 +77,7 @@ public class RsaEncryptionAttributes {
         return attribute;
     }
 
-    public static BaseAttributeV2<?> buildDataOaepMgf() {
+    public static BaseAttribute buildDataOaepMgf() {
         // define Data Attribute
         DataAttributeV2 attribute = new DataAttributeV2();
         attribute.setUuid(ATTRIBUTE_DATA_RSA_OAEP_USE_MGF_UUID);
@@ -99,7 +97,7 @@ public class RsaEncryptionAttributes {
         return attribute;
     }
 
-    public static BaseAttributeV2<?> buildDataOaepHash() {
+    public static BaseAttribute buildDataOaepHash() {
         // define Data Attribute
         DataAttributeV2 attribute = new DataAttributeV2();
         attribute.setUuid(ATTRIBUTE_DATA_RSA_OAEP_HASH_UUID);
@@ -110,7 +108,7 @@ public class RsaEncryptionAttributes {
         attribute.setContent(
                 Stream.of(DigestAlgorithm.values())
                         .map(item -> new StringAttributeContentV2(item.getLabel(), item.getCode()))
-                        .collect(Collectors.toList())
+                        .toList()
         );
         // create properties
         DataAttributeProperties attributeProperties = new DataAttributeProperties();
